--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -8,12 +8,18 @@
     android:background="@color/light_yellow"
     android:orientation="vertical"
     android:paddingLeft="30dp"
+    android:paddingRight="30dp"
     android:paddingTop="80dp"
-    tools:context=".activities.LoginActivity">
+    android:clickable="true"
+    android:focusableInTouchMode="true"
+    android:focusable="true"
+    tools:context=".activities.LoginActivity"
+    >
 
     <com.google.android.material.imageview.ShapeableImageView
         android:id="@+id/image_view"
         android:layout_width="270dp"
+        android:padding="50dp"
         android:layout_height="270dp"
         android:layout_gravity="center_horizontal"
         android:src="@mipmap/busmarker"
@@ -23,7 +29,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="12dp"
-        android:textColorHint="@color/black">
+        app:boxBackgroundMode="none"
+        android:layout_marginBottom="12dp"
+        android:textColorHint="@color/gray">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/username"
@@ -31,13 +39,16 @@
             android:layout_height="wrap_content"
             android:hint="@string/enter_your_username"
             android:inputType="text"
+            app:boxBackgroundMode="none"
+            android:background="@color/white"
             android:textColor="@color/black" />
     </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.textfield.TextInputLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textColorHint="@color/black"
+        app:boxBackgroundMode="none"
+        android:textColorHint="@color/gray"
         app:passwordToggleEnabled="true">
 
         <com.google.android.material.textfield.TextInputEditText
@@ -46,14 +57,16 @@
             android:layout_height="wrap_content"
             android:hint="@string/enter_your_password"
             android:inputType="textPassword"
-            android:textColor="@color/black" />
+            android:textColor="@color/black"
+            app:boxBackgroundMode="none"
+            android:background="@color/white"/>
     </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.button.MaterialButton
         android:id="@+id/loginButton"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="12dp"
+        android:layout_marginTop="30dp"
         android:background="@drawable/button_layout"
         android:text="@string/login"
         android:textAlignment="center"
