--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -9,10 +9,11 @@
         <!-- Secondary brand color. -->
         <item name="colorSecondary">@color/light_goldenrod_yellow</item>
         <item name="colorSecondaryVariant">@color/light_yellow</item>
-        <item name="colorOnSecondary">@color/black</item>
+        <item name="colorOnSecondary">@color/yellow</item>
         <!-- Status bar color. -->
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
+        <item name="editTextBackground">@color/white</item>
     </style>
 
 <style name="SplashTheme" parent="Theme.MaterialComponents.Light.NoActionBar">
@@ -25,10 +26,19 @@
     <!-- Secondary brand color. -->
     <item name="colorSecondary">@color/light_goldenrod_yellow</item>
     <item name="colorSecondaryVariant">@color/light_yellow</item>
-    <item name="colorOnSecondary">@color/black</item>
+    <item name="colorOnSecondary">@color/yellow</item>
     <!-- Status bar color. -->
     <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
     <!-- Customize your theme here. -->
 </style>
+
+    <style name="Theme.SBTS.NoActionBar" parent= "Theme.MaterialComponents.DayNight.NoActionBar">
+        <item name="colorPrimary">@color/colorPrimary</item>
+        <item name="colorPrimaryVariant">@color/colorPrimaryDark</item>
+        <item name="colorOnPrimary">@color/white</item>
+        <item name="colorAccent">@color/colorAccent</item>
+        <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
+
+    </style>
 
 </resources>
