--- a/app/src/main/res/menu/parent_navigation_menu.xml
+++ b/app/src/main/res/menu/parent_navigation_menu.xml
@@ -4,17 +4,16 @@
     tools:showIn="navigation_view">
 
     <group
-        android:id="@+id/selectActivitiesParent"
         android:checkableBehavior="single">
 
         <item
-            android:id="@+id/nav_parent_profile"
+            android:id="@+id/nav_parent_home"
             android:icon="@drawable/ic_account_circle_black_24dp"
             android:title="@string/profile"
              />
 
         <item
-            android:id="@+id/nav_bus_location"
+            android:id="@+id/nav_map"
             android:icon="@drawable/ic_map_black_24dp"
             android:title="@string/bus_location"
              />
@@ -22,7 +21,7 @@
 
 
         <item
-            android:id="@+id/nav_change_pass"
+            android:id="@+id/nav_password_change"
             android:icon="@drawable/change_pass"
             android:title="@string/change_password"
              />
