--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,6 +1,6 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.SBTS" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+    <style name="Theme.SBTS" parent="Theme.MaterialComponents.DayNight.NoActionBar">
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryVariant">@color/colorPrimaryDark</item>
@@ -16,23 +16,24 @@
         <item name="editTextBackground">@color/white</item>
     </style>
 
-<style name="SplashTheme" parent="Theme.MaterialComponents.Light.NoActionBar">
-    <item name="android:windowBackground">@drawable/splash_background</item>
-    <!-- Primary brand color. -->
-    <item name="colorPrimary">@color/colorPrimary</item>
-    <item name="colorPrimaryVariant">@color/colorPrimaryDark</item>
-    <item name="colorOnPrimary">@color/white</item>
-    <item name="colorAccent">@color/colorAccent</item>
-    <!-- Secondary brand color. -->
-    <item name="colorSecondary">@color/light_goldenrod_yellow</item>
-    <item name="colorSecondaryVariant">@color/light_yellow</item>
-    <item name="colorOnSecondary">@color/yellow</item>
-    <!-- Status bar color. -->
-    <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
-    <!-- Customize your theme here. -->
-</style>
+    <style name="SplashTheme" parent="Theme.MaterialComponents.Light.NoActionBar">
+        <item name="android:windowBackground">@drawable/splash_background</item>
+        <!-- Primary brand color. -->
+        <item name="colorPrimary">@color/colorPrimary</item>
+        <item name="colorPrimaryVariant">@color/colorPrimaryDark</item>
+        <item name="colorOnPrimary">@color/white</item>
+        <item name="colorAccent">@color/colorAccent</item>
+        <!-- Secondary brand color. -->
+        <item name="colorSecondary">@color/light_goldenrod_yellow</item>
+        <item name="colorSecondaryVariant">@color/light_yellow</item>
+        <item name="colorOnSecondary">@color/yellow</item>
+        <!-- Status bar color. -->
+        <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
+        <!-- Customize your theme here. -->
 
-    <style name="Theme.SBTS.NoActionBar" parent= "Theme.MaterialComponents.DayNight.NoActionBar">
+    </style>
+
+    <style name="Theme.SBTS.NoActionBar" parent="Theme.MaterialComponents.DayNight.NoActionBar">
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryVariant">@color/colorPrimaryDark</item>
         <item name="colorOnPrimary">@color/white</item>
@@ -40,5 +41,9 @@
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
 
     </style>
+
+    <style name="Theme.SBTS.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
+
+    <style name="Theme.SBTS.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 
 </resources>
