--- a/app/src/main/res/layout/fragment_change_password.xml
+++ b/app/src/main/res/layout/fragment_change_password.xml
@@ -1,14 +1,86 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<androidx.appcompat.widget.LinearLayoutCompat
+    xmlns:android="http://schemas.android.com/apk/res/android"
+xmlns:tools="http://schemas.android.com/tools"
+android:layout_width="match_parent"
+android:layout_height="match_parent"
+xmlns:app="http://schemas.android.com/apk/res-auto"
+android:background="@color/light_yellow"
+android:orientation="vertical"
+android:paddingLeft="30dp"
+android:paddingTop="80dp"
+android:paddingRight="30dp"
+tools:context=".fragments.ChangePassword">
+
+
+
+<com.google.android.material.imageview.ShapeableImageView
+    android:id="@+id/logo"
+    android:layout_width="270dp"
+    android:layout_gravity="center_horizontal"
+    android:layout_height="270dp"
+    android:src="@mipmap/busmarker"
+    android:padding="50dp"
+    tools:ignore="ContentDescription" />
+
+
+
+<com.google.android.material.textfield.TextInputLayout
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".fragments.ChangePassword">
+    android:layout_height="wrap_content"
+    android:layout_marginTop="10dp"
+    android:textColorHint="@color/gray"
+    app:endIconTint="@color/gray"
+    app:boxBackgroundMode="none"
+    app:passwordToggleEnabled="true">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <com.google.android.material.textfield.TextInputEditText
+        android:id="@+id/old_password"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:layout_height="wrap_content"
+        android:hint="@string/enter_your_old_password"
+        android:inputType="textPassword"
+        android:textColor="@color/black"
+        android:background="@color/white"
+        />
 
-</FrameLayout>
+</com.google.android.material.textfield.TextInputLayout>
+
+
+
+<com.google.android.material.textfield.TextInputLayout
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:layout_marginTop="10dp"
+    android:textColorHint="@color/gray"
+    app:endIconTint="@color/gray"
+    app:boxBackgroundMode="none"
+    app:passwordToggleEnabled="true">
+
+    <com.google.android.material.textfield.TextInputEditText
+        android:id="@+id/new_password"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="@string/enter_your_new_password"
+        android:inputType="textPassword"
+        android:textColor="@color/black"
+        android:background="@color/white"
+        />
+
+</com.google.android.material.textfield.TextInputLayout>
+
+
+
+<com.google.android.material.button.MaterialButton
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:id="@+id/password_change"
+    android:layout_gravity="center"
+    android:layout_marginTop="18dp"
+    android:background="@drawable/button_layout_2"
+    android:text="@string/submit"
+    android:paddingHorizontal="25dp"
+    android:textColor="@color/black" />
+
+
+</androidx.appcompat.widget.LinearLayoutCompat>
