--- a/app/src/main/res/menu/attendee_navigation_menu.xml
+++ b/app/src/main/res/menu/attendee_navigation_menu.xml
@@ -34,7 +34,7 @@
              />
 
         <item
-            android:id="@+id/nav_change_password"
+            android:id="@+id/nav_password_change"
             android:icon="@drawable/change_pass"
             android:title="@string/change_password"
              />
