--- a/app/src/main/res/navigation/attendee_navigation.xml
+++ b/app/src/main/res/navigation/attendee_navigation.xml
@@ -6,10 +6,10 @@
     app:startDestination="@+id/nav_map">
 
     <fragment
-        android:id="@+id/nav_parent_home"
-        android:name="com.app.sbts.fragments.ParentHome"
+        android:id="@+id/nav_profile"
+        android:name="com.app.sbts.fragments.AttendeeHome"
         android:label="@string/profile"
-        tools:layout="@layout/fragment_parent_home" >
+        tools:layout="@layout/fragment_attendee_home" >
 
     </fragment>
 
