--- a/app/src/main/res/menu/attendee_navigation_menu.xml
+++ b/app/src/main/res/menu/attendee_navigation_menu.xml
@@ -22,16 +22,12 @@
 
 
         <item
-            android:id="@+id/nav_studentsPresent"
+            android:id="@+id/nav_student_list"
             android:icon="@drawable/ic_student_present"
             android:title="@string/student_s_list"
             />
 
-        <item
-            android:id="@+id/nav_scanner"
-            android:icon="@drawable/ic_camera_black_24dp"
-            android:title="@string/scanner"
-             />
+
 
         <item
             android:id="@+id/nav_password_change"
