--- a/app/src/main/res/layout/student_row_item.xml
+++ b/app/src/main/res/layout/student_row_item.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="150dp"
@@ -45,13 +46,13 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
             android:background="@drawable/roll_background"
-            android:drawableLeft="@drawable/ic_school_black_24dp"
             android:paddingRight="5dp"
             android:text="0"
             android:textColor="#FFF"
             android:textSize="15sp"
             android:textStyle="bold"
-            tools:ignore="HardcodedText,RtlHardcoded,RtlSymmetry" />
+            tools:ignore="HardcodedText,RtlHardcoded,RtlSymmetry"
+            app:drawableLeftCompat="@drawable/ic_school_black_24dp" />
 
         <TextView
             android:id="@+id/student_class"
