--- a/app/src/main/res/layout/activity_register_user.xml
+++ b/app/src/main/res/layout/activity_register_user.xml
@@ -67,77 +67,77 @@
         </com.google.android.material.textfield.TextInputLayout>
 
 
-        <androidx.appcompat.widget.LinearLayoutCompat
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
+<!--        <androidx.appcompat.widget.LinearLayoutCompat-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:orientation="horizontal">-->
 
-            <com.google.android.material.textview.MaterialTextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="15dp"
-                android:text="@string/select_your_gender"
-                android:textColor="@color/black"
-                android:textSize="17sp" />
+<!--            <com.google.android.material.textview.MaterialTextView-->
+<!--                android:layout_width="wrap_content"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:layout_marginTop="15dp"-->
+<!--                android:text="@string/select_your_gender"-->
+<!--                android:textColor="@color/black"-->
+<!--                android:textSize="17sp" />-->
 
-            <RadioGroup
-                android:id="@+id/radioGrp"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
-                android:orientation="horizontal">
+<!--            <RadioGroup-->
+<!--                android:id="@+id/radioGrp"-->
+<!--                android:layout_width="wrap_content"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:layout_marginTop="10dp"-->
+<!--                android:orientation="horizontal">-->
 
-                <RadioButton
-                    android:id="@+id/radioM"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="left"
-                    android:layout_weight="1"
-                    android:checked="true"
-                    android:text="@string/male"
-                    android:textSize="14sp"
-                    tools:ignore="RtlHardcoded" />
+<!--                <RadioButton-->
+<!--                    android:id="@+id/radioM"-->
+<!--                    android:layout_width="wrap_content"-->
+<!--                    android:layout_height="wrap_content"-->
+<!--                    android:layout_gravity="left"-->
+<!--                    android:layout_weight="1"-->
+<!--                    android:checked="true"-->
+<!--                    android:text="@string/male"-->
+<!--                    android:textSize="14sp"-->
+<!--                    tools:ignore="RtlHardcoded" />-->
 
-                <RadioButton
-                    android:id="@+id/radioF"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="right"
-                    android:layout_marginStart="10dp"
-                    android:layout_weight="1"
-                    android:checked="false"
-                    android:text="@string/female"
-                    android:textSize="14sp"
-                    tools:ignore="RtlHardcoded" />
-            </RadioGroup>
+<!--                <RadioButton-->
+<!--                    android:id="@+id/radioF"-->
+<!--                    android:layout_width="wrap_content"-->
+<!--                    android:layout_height="wrap_content"-->
+<!--                    android:layout_gravity="right"-->
+<!--                    android:layout_marginStart="10dp"-->
+<!--                    android:layout_weight="1"-->
+<!--                    android:checked="false"-->
+<!--                    android:text="@string/female"-->
+<!--                    android:textSize="14sp"-->
+<!--                    tools:ignore="RtlHardcoded" />-->
+<!--            </RadioGroup>-->
 
 
-        </androidx.appcompat.widget.LinearLayoutCompat>
+<!--        </androidx.appcompat.widget.LinearLayoutCompat>-->
 
-        <androidx.appcompat.widget.LinearLayoutCompat
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
+<!--        <androidx.appcompat.widget.LinearLayoutCompat-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:orientation="horizontal">-->
 
-            <com.google.android.material.textview.MaterialTextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="15dp"
-                android:text="@string/select_profile_photo"
-                android:textColor="@color/black"
-                android:textSize="17sp" />
+<!--            <com.google.android.material.textview.MaterialTextView-->
+<!--                android:layout_width="wrap_content"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:layout_marginTop="15dp"-->
+<!--                android:text="@string/select_profile_photo"-->
+<!--                android:textColor="@color/black"-->
+<!--                android:textSize="17sp" />-->
 
-            <com.google.android.material.button.MaterialButton
-                android:id="@+id/register_photo"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="10dp"
-                android:layout_marginTop="15dp"
-                android:background="@drawable/button_layout_2"
-                android:text="@string/choose"
-                android:textColor="@color/black" />
+<!--            <com.google.android.material.button.MaterialButton-->
+<!--                android:id="@+id/register_photo"-->
+<!--                android:layout_width="wrap_content"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:layout_marginStart="10dp"-->
+<!--                android:layout_marginTop="15dp"-->
+<!--                android:background="@drawable/button_layout_2"-->
+<!--                android:text="@string/choose"-->
+<!--                android:textColor="@color/black" />-->
 
-        </androidx.appcompat.widget.LinearLayoutCompat>
+<!--        </androidx.appcompat.widget.LinearLayoutCompat>-->
 
         <com.google.android.material.textfield.TextInputLayout
             android:layout_width="match_parent"
@@ -325,6 +325,7 @@
 
 
         <com.google.android.material.button.MaterialButton
+            android:id="@+id/register_submit"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
