--- a/app/src/main/res/navigation/admin_navigation.xml
+++ b/app/src/main/res/navigation/admin_navigation.xml
@@ -3,34 +3,40 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/admin_navigation"
-    app:startDestination="@+id/nav_map">
+    app:startDestination="@+id/nav_bus_locations">
 
     <fragment
-        android:id="@+id/nav_profile"
-        android:name="com.app.sbts.fragments.AttendeeHome"
-        android:label="@string/profile"
-        tools:layout="@layout/fragment_attendee_home" />
+        android:id="@+id/nav_driver_list"
+        android:name="com.app.sbts.fragments.DriverList"
+        android:label="@string/drivers_list"
+        tools:layout="@layout/fragment_driver_list" />
+
+    <fragment
+        android:id="@+id/nav_busList"
+        android:name="com.app.sbts.fragments.BusList"
+        android:label="@string/bus_list"
+        tools:layout="@layout/fragment_bus_list" />
+
+    <fragment
+        android:id="@+id/nav_parent_list"
+        android:name="com.app.sbts.fragments.ParentList"
+        android:label="@string/parents_list"
+        tools:layout="@layout/fragment_parent_list" />
+
+    <fragment
+        android:id="@+id/nav_bus_locations"
+        android:name="com.app.sbts.fragments.Bus_Locations"
+        android:label="@string/bus_locations"
+        tools:layout="@layout/fragment_bus__locations" />
 
 
     <fragment
-        android:id="@+id/nav_map"
-        android:name="com.app.sbts.fragments.MapsFragment"
-        android:label="@string/map"
-        tools:layout="@layout/fragment_maps" />
-
-
-    <fragment
-        android:id="@+id/nav_student_list"
-        android:name="com.app.sbts.fragments.StudentList"
+        android:id="@+id/nav_students_list"
+        android:name="com.app.sbts.fragments.Students_List"
         android:label="@string/student_s_list"
-        tools:layout="@layout/fragment_student_list" />
+        tools:layout="@layout/fragment_students__list" />
 
 
-    <fragment
-        android:id="@+id/nav_password_change"
-        android:name="com.app.sbts.fragments.ChangePassword"
-        android:label="@string/change_password"
-        tools:layout="@layout/fragment_change_password" />
 
 
 </navigation>
