--- a/app/src/main/res/menu/admin_navigation_menu.xml
+++ b/app/src/main/res/menu/admin_navigation_menu.xml
@@ -33,6 +33,12 @@
             android:title="@string/parents_list"
             />
 
+        <item
+            android:id="@+id/nav_requests_list"
+            android:icon="@drawable/registration"
+            android:title="@string/registration_requests"
+            />
+
 
         <item
             android:id="@+id/nav_students_list"
