--- a/app/src/main/res/menu/admin_navigation_menu.xml
+++ b/app/src/main/res/menu/admin_navigation_menu.xml
@@ -21,6 +21,13 @@
             />
 
 
+
+        <item
+            android:id="@+id/nav_attendee_list"
+            android:icon="@drawable/ic_baseline_people_24"
+            android:title="@string/attendee_list"
+            />
+
         <item
             android:id="@+id/nav_driver_list"
             android:icon="@drawable/ic_baseline_people_24"
