--- a/app/src/main/res/layout/fragment_attendee_list.xml
+++ b/app/src/main/res/layout/fragment_attendee_list.xml
@@ -23,5 +23,16 @@
         android:layout_marginTop="16dp"
         android:layout_marginRight="16dp" />
 
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/add_attendee"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/person_add"
+        android:backgroundTint="@color/white"
+        android:layout_marginBottom="10dp"
+        android:layout_marginEnd="10dp"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:contentDescription="@string/add_driver" />
 
 </RelativeLayout>
