--- a/app/src/main/res/layout/fragment_driver_list.xml
+++ b/app/src/main/res/layout/fragment_driver_list.xml
@@ -3,8 +3,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@color/light_yellow"
-    android:orientation="vertical"
     tools:context=".fragments.DriverList">
 
     <ProgressBar
@@ -24,4 +24,15 @@
         android:layout_marginRight="16dp" />
 
 
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/add_driver"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/person_add"
+        android:backgroundTint="@color/white"
+        android:layout_marginBottom="10dp"
+        android:layout_marginEnd="10dp"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:contentDescription="@string/add_driver" />
 </RelativeLayout>
