--- a/app/src/main/res/layout/activity_register_attendee.xml
+++ b/app/src/main/res/layout/activity_register_attendee.xml
@@ -227,6 +227,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:inputType="number"
+                android:maxLength="12"
                 android:background="@color/white"
                 android:textColor="@color/black" />
 
