--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -9,18 +9,31 @@
     android:orientation="vertical"
     android:paddingLeft="30dp"
     android:paddingRight="30dp"
-    android:paddingTop="80dp"
+    android:paddingTop="20dp"
     android:clickable="true"
     android:focusableInTouchMode="true"
     android:focusable="true"
     tools:context=".activities.LoginActivity"
     >
 
+    <TextView
+        android:id="@+id/titleLoginPage"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_marginBottom="10dp"
+        android:layout_marginTop="20dp"
+        android:fontFamily="@font/aldrich"
+        android:text="School Bus Tracking System"
+        android:textColor="#03A9F4"
+        android:textSize="24sp"
+        android:textStyle="bold" />
+
     <com.google.android.material.imageview.ShapeableImageView
         android:id="@+id/image_view"
-        android:layout_width="270dp"
-        android:padding="50dp"
-        android:layout_height="270dp"
+        android:layout_width="150dp"
+        android:padding="30dp"
+        android:layout_height="150dp"
         android:layout_gravity="center_horizontal"
         android:src="@mipmap/busmarker"
         />
@@ -28,9 +41,9 @@
     <com.google.android.material.textfield.TextInputLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="12dp"
+        android:layout_marginTop="5dp"
         app:boxBackgroundMode="none"
-        android:layout_marginBottom="12dp"
+        android:layout_marginBottom="5dp"
         android:textColorHint="@color/gray">
 
         <com.google.android.material.textfield.TextInputEditText
@@ -66,7 +79,7 @@
         android:id="@+id/loginButton"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="20dp"
         android:background="@drawable/button_layout"
         android:text="@string/login"
         android:textAlignment="center"
@@ -79,12 +92,12 @@
 
         <com.google.android.material.textview.MaterialTextView
             android:id="@+id/resetPassword"
-            android:layout_width="wrap_content"
+            android:layout_width="349dp"
             android:layout_height="wrap_content"
+            android:layout_gravity="end"
             android:paddingTop="5dp"
             android:textAlignment="textEnd"
-            android:textColor="@color/black"
-            android:layout_gravity="end"/>
+            android:textColor="@color/black" />
     </com.google.android.material.textfield.TextInputLayout>
 
     <ProgressBar
@@ -103,8 +116,10 @@
             android:id="@+id/userRegistration"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="80dp"
+            android:layout_marginTop="50dp"
             android:textAlignment="center"
             android:textColor="@color/black" />
     </com.google.android.material.textfield.TextInputLayout>
+
+
 </androidx.appcompat.widget.LinearLayoutCompat>
