--- a/app/src/main/res/drawable/student_list_background.xml
+++ b/app/src/main/res/drawable/student_list_background.xml
@@ -3,9 +3,11 @@
     <item>
 
         <shape android:shape="rectangle">
-            <stroke android:color="@color/colorPrimary"
+            <corners android:topRightRadius="20dp"
+                android:bottomRightRadius="20dp"/>
+            <stroke android:color="@color/boxstrokecolor"
                 android:width="2dp"/>
-
+            <solid android:color="@color/white"/>
         </shape>
     </item>
 
