--- a/app/src/main/res/layout/activity_password.xml
+++ b/app/src/main/res/layout/activity_password.xml
@@ -27,8 +27,10 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
-        app:boxBackgroundMode="none"
-        android:textColorHint="@color/gray">
+        app:boxStrokeWidthFocused="2sp"
+        app:boxBackgroundColor="@color/white"
+        app:hintTextColor="@color/black"
+        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/password_reset_email"
@@ -39,7 +41,6 @@
             android:textColor="@color/black"
             android:drawableStart="@drawable/ic_email_black_24dp"
             android:drawableTint="@color/gray"
-            android:background="@color/white"
             android:drawablePadding="7dp"
             />
 
@@ -50,7 +51,7 @@
         android:layout_height="wrap_content"
         android:id="@+id/password_reset"
         android:layout_gravity="center"
-        android:layout_marginTop="12dp"
+        android:layout_marginTop="40dp"
         android:paddingHorizontal="25dp"
         android:background="@drawable/button_layout_2"
         android:text="@string/submit"
