--- a/app/src/main/res/layout/activity_add_bus.xml
+++ b/app/src/main/res/layout/activity_add_bus.xml
@@ -23,30 +23,36 @@
 
 
         <com.google.android.material.textview.MaterialTextView
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/bus_details"
             android:textColor="@color/black"
             android:textSize="25sp"
-            android:textStyle="bold" />
+            android:textStyle="bold"
+            android:gravity="center"
+            android:layout_marginTop="10sp"
+            android:layout_marginBottom="10sp" />
+
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/vehicle_name_layout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="25dp"
             android:hint="@string/bus_name"
-            android:textColorHint="@color/black"
-            app:boxBackgroundMode="none"
             app:errorEnabled="true"
-            app:hintEnabled="true">
+            app:hintEnabled="true"
+            app:boxStrokeColor="@color/boxstrokecolor"
+            app:boxStrokeWidthFocused="2sp"
+            app:boxBackgroundColor="@color/white"
+            app:hintTextColor="@color/black"
+            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/vehicle_name"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:inputType="text"
-                android:textColor="@color/black"
-                android:background="@color/white"/>
+                android:textColor="@color/black"/>
 
         </com.google.android.material.textfield.TextInputLayout>
 
@@ -56,18 +62,20 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="25dp"
             android:hint="@string/vehicle_model"
-            android:textColorHint="@color/black"
-            app:boxBackgroundMode="none"
             app:errorEnabled="true"
-            app:hintEnabled="true">
+            app:hintEnabled="true"
+            app:boxStrokeColor="@color/boxstrokecolor"
+            app:boxStrokeWidthFocused="2sp"
+            app:boxBackgroundColor="@color/white"
+            app:hintTextColor="@color/black"
+            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/vehicle_model"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:inputType="text"
-                android:textColor="@color/black"
-                android:background="@color/white"/>
+                android:textColor="@color/black"/>
 
         </com.google.android.material.textfield.TextInputLayout>
 
@@ -77,18 +85,20 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="25dp"
             android:hint="@string/capacity"
-            android:textColorHint="@color/black"
-            app:boxBackgroundMode="none"
             app:errorEnabled="true"
-            app:hintEnabled="true">
+            app:hintEnabled="true"
+            app:boxStrokeColor="@color/boxstrokecolor"
+            app:boxStrokeWidthFocused="2sp"
+            app:boxBackgroundColor="@color/white"
+            app:hintTextColor="@color/black"
+            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/capacity"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:inputType="text"
-                android:textColor="@color/black"
-                android:background="@color/white"/>
+                android:textColor="@color/black"/>
 
         </com.google.android.material.textfield.TextInputLayout>
 
@@ -98,18 +108,20 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="25dp"
             android:hint="@string/color"
-            android:textColorHint="@color/black"
-            app:boxBackgroundMode="none"
             app:errorEnabled="true"
-            app:hintEnabled="true">
+            app:hintEnabled="true"
+            app:boxStrokeColor="@color/boxstrokecolor"
+            app:boxStrokeWidthFocused="2sp"
+            app:boxBackgroundColor="@color/white"
+            app:hintTextColor="@color/black"
+            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/color"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:inputType="text"
-                android:textColor="@color/black"
-                android:background="@color/white"/>
+                android:textColor="@color/black"/>
 
         </com.google.android.material.textfield.TextInputLayout>
 
@@ -119,20 +131,23 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="25dp"
             android:hint="@string/bus_no"
-            android:textColorHint="@color/black"
-            app:boxBackgroundMode="none"
             app:errorEnabled="true"
-            app:hintEnabled="true">
+            app:hintEnabled="true"
+            app:boxStrokeColor="@color/boxstrokecolor"
+            app:boxStrokeWidthFocused="2sp"
+            app:boxBackgroundColor="@color/white"
+            app:hintTextColor="@color/black"
+            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/bus_no"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:inputType="text"
-                android:textColor="@color/black"
-                android:background="@color/white"/>
+                android:textColor="@color/black"/>
 
         </com.google.android.material.textfield.TextInputLayout>
+
         <com.google.android.material.button.MaterialButton
             android:id="@+id/register_submit"
             android:layout_width="wrap_content"
