--- a/app/src/main/res/layout/activity_register_student.xml
+++ b/app/src/main/res/layout/activity_register_student.xml
@@ -18,12 +18,15 @@
         android:orientation="vertical">
 
         <com.google.android.material.textview.MaterialTextView
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/student_details"
             android:textColor="@color/black"
             android:textSize="25sp"
-            android:textStyle="bold" />
+            android:textStyle="bold"
+            android:gravity="center"
+            android:layout_marginTop="10sp"
+            android:layout_marginBottom="10sp" />
 
 
         <com.google.android.material.textfield.TextInputLayout
@@ -32,18 +35,20 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="25dp"
             android:hint="@string/student_name"
-            android:textColorHint="@color/black"
-            app:boxBackgroundMode="none"
             app:errorEnabled="true"
-            app:hintEnabled="true">
+            app:hintEnabled="true"
+            app:boxStrokeColor="@color/boxstrokecolor"
+            app:boxStrokeWidthFocused="2sp"
+            app:boxBackgroundColor="@color/white"
+            app:hintTextColor="@color/black"
+            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/student_name"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:inputType="text"
-                android:textColor="@color/black"
-                android:background="@color/white"/>
+                android:textColor="@color/black"/>
 
         </com.google.android.material.textfield.TextInputLayout>
         <com.google.android.material.textfield.TextInputLayout
@@ -52,18 +57,20 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="25dp"
             android:hint="@string/father_name"
-            android:textColorHint="@color/black"
-            app:boxBackgroundMode="none"
             app:errorEnabled="true"
-            app:hintEnabled="true">
+            app:hintEnabled="true"
+            app:boxStrokeColor="@color/boxstrokecolor"
+            app:boxStrokeWidthFocused="2sp"
+            app:boxBackgroundColor="@color/white"
+            app:hintTextColor="@color/black"
+            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/father_name"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:inputType="text"
-                android:textColor="@color/black"
-                android:background="@color/white"/>
+                android:textColor="@color/black"/>
 
         </com.google.android.material.textfield.TextInputLayout>
         <com.google.android.material.textfield.TextInputLayout
@@ -72,18 +79,20 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="25dp"
             android:hint="@string/mother_name"
-            android:textColorHint="@color/black"
-            app:boxBackgroundMode="none"
             app:errorEnabled="true"
-            app:hintEnabled="true">
+            app:hintEnabled="true"
+            app:boxStrokeColor="@color/boxstrokecolor"
+            app:boxStrokeWidthFocused="2sp"
+            app:boxBackgroundColor="@color/white"
+            app:hintTextColor="@color/black"
+            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/mother_name"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:inputType="text"
-                android:textColor="@color/black"
-                android:background="@color/white"/>
+                android:textColor="@color/black"/>
 
         </com.google.android.material.textfield.TextInputLayout>
         <com.google.android.material.textfield.TextInputLayout
@@ -92,18 +101,20 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="25dp"
             android:hint="@string/yyyy_mm_dd"
-            android:textColorHint="@color/black"
-            app:boxBackgroundMode="none"
             app:errorEnabled="true"
-            app:hintEnabled="true">
+            app:hintEnabled="true"
+            app:boxStrokeColor="@color/boxstrokecolor"
+            app:boxStrokeWidthFocused="2sp"
+            app:boxBackgroundColor="@color/white"
+            app:hintTextColor="@color/black"
+            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/dob"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:inputType="date"
-                android:textColor="@color/black"
-                android:background="@color/white"/>
+                android:textColor="@color/black"/>
 
         </com.google.android.material.textfield.TextInputLayout>
         <com.google.android.material.textfield.TextInputLayout
@@ -112,19 +123,21 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="25dp"
             android:hint="@string/age"
-            android:textColorHint="@color/black"
-            app:boxBackgroundMode="none"
             app:errorEnabled="true"
-            app:hintEnabled="true">
+            app:hintEnabled="true"
+            app:boxStrokeColor="@color/boxstrokecolor"
+            app:boxStrokeWidthFocused="2sp"
+            app:boxBackgroundColor="@color/white"
+            app:hintTextColor="@color/black"
+            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/age"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:inputType="number"
-                android:maxLength="3"
-                android:textColor="@color/black"
-                android:background="@color/white"/>
+                android:maxLength="2"
+                android:textColor="@color/black"/>
 
         </com.google.android.material.textfield.TextInputLayout>
         <com.google.android.material.textfield.TextInputLayout
@@ -133,18 +146,20 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="25dp"
             android:hint="@string/male_female"
-            android:textColorHint="@color/black"
-            app:boxBackgroundMode="none"
             app:errorEnabled="true"
-            app:hintEnabled="true">
+            app:hintEnabled="true"
+            app:boxStrokeColor="@color/boxstrokecolor"
+            app:boxStrokeWidthFocused="2sp"
+            app:boxBackgroundColor="@color/white"
+            app:hintTextColor="@color/black"
+            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/gender"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:inputType="text"
-                android:textColor="@color/black"
-                android:background="@color/white"/>
+                android:textColor="@color/black"/>
 
         </com.google.android.material.textfield.TextInputLayout>
         <com.google.android.material.textfield.TextInputLayout
@@ -153,18 +168,20 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="25dp"
             android:hint="@string/email"
-            android:textColorHint="@color/black"
-            app:boxBackgroundMode="none"
             app:errorEnabled="true"
-            app:hintEnabled="true">
+            app:hintEnabled="true"
+            app:boxStrokeColor="@color/boxstrokecolor"
+            app:boxStrokeWidthFocused="2sp"
+            app:boxBackgroundColor="@color/white"
+            app:hintTextColor="@color/black"
+            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/email"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:inputType="textEmailAddress"
-                android:textColor="@color/black"
-                android:background="@color/white"/>
+                android:textColor="@color/black"/>
 
         </com.google.android.material.textfield.TextInputLayout>
         <com.google.android.material.textfield.TextInputLayout
@@ -173,10 +190,13 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="25dp"
             android:hint="@string/mobile"
-            android:textColorHint="@color/black"
-            app:boxBackgroundMode="none"
             app:errorEnabled="true"
-            app:hintEnabled="true">
+            app:hintEnabled="true"
+            app:boxStrokeColor="@color/boxstrokecolor"
+            app:boxStrokeWidthFocused="2sp"
+            app:boxBackgroundColor="@color/white"
+            app:hintTextColor="@color/black"
+            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/mobile1"
@@ -184,8 +204,7 @@
                 android:layout_height="wrap_content"
                 android:inputType="phone"
                 android:maxLength="10"
-                android:textColor="@color/black"
-                android:background="@color/white"/>
+                android:textColor="@color/black"/>
 
         </com.google.android.material.textfield.TextInputLayout>
         <com.google.android.material.textfield.TextInputLayout
@@ -194,10 +213,13 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="25dp"
             android:hint="@string/alternate_mobile"
-            android:textColorHint="@color/black"
-            app:boxBackgroundMode="none"
             app:errorEnabled="true"
-            app:hintEnabled="true">
+            app:hintEnabled="true"
+            app:boxStrokeColor="@color/boxstrokecolor"
+            app:boxStrokeWidthFocused="2sp"
+            app:boxBackgroundColor="@color/white"
+            app:hintTextColor="@color/black"
+            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/mobile2"
@@ -205,8 +227,7 @@
                 android:layout_height="wrap_content"
                 android:inputType="phone"
                 android:maxLength="10"
-                android:textColor="@color/black"
-                android:background="@color/white"/>
+                android:textColor="@color/black"/>
 
         </com.google.android.material.textfield.TextInputLayout>
         <com.google.android.material.textfield.TextInputLayout
@@ -215,18 +236,20 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="25dp"
             android:hint="@string/address"
-            android:textColorHint="@color/black"
-            app:boxBackgroundMode="none"
             app:errorEnabled="true"
-            app:hintEnabled="true">
+            app:hintEnabled="true"
+            app:boxStrokeColor="@color/boxstrokecolor"
+            app:boxStrokeWidthFocused="2sp"
+            app:boxBackgroundColor="@color/white"
+            app:hintTextColor="@color/black"
+            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/address"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:inputType="text"
-                android:textColor="@color/black"
-                android:background="@color/white"/>
+                android:inputType="textMultiLine"
+                android:textColor="@color/black"/>
 
         </com.google.android.material.textfield.TextInputLayout>
         <com.google.android.material.textfield.TextInputLayout
@@ -235,18 +258,20 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="25dp"
             android:hint="@string/city_name"
-            android:textColorHint="@color/black"
-            app:boxBackgroundMode="none"
             app:errorEnabled="true"
-            app:hintEnabled="true">
+            app:hintEnabled="true"
+            app:boxStrokeColor="@color/boxstrokecolor"
+            app:boxStrokeWidthFocused="2sp"
+            app:boxBackgroundColor="@color/white"
+            app:hintTextColor="@color/black"
+            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/city"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:inputType="text"
-                android:textColor="@color/black"
-                android:background="@color/white"/>
+                android:textColor="@color/black"/>
 
         </com.google.android.material.textfield.TextInputLayout>
         <com.google.android.material.textfield.TextInputLayout
@@ -254,9 +279,12 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="25dp"
-            android:hint="@string/pincode"
-            android:textColorHint="@color/black"
-            app:boxBackgroundMode="none"
+            android:hint="@string/pin_code"
+            app:boxStrokeColor="@color/boxstrokecolor"
+            app:boxStrokeWidthFocused="2sp"
+            app:boxBackgroundColor="@color/white"
+            app:hintTextColor="@color/black"
+            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
             app:errorEnabled="true"
             app:hintEnabled="true">
 
@@ -266,8 +294,7 @@
                 android:layout_height="wrap_content"
                 android:inputType="number"
                 android:maxLength="6"
-                android:textColor="@color/black"
-                android:background="@color/white"/>
+                android:textColor="@color/black"/>
 
         </com.google.android.material.textfield.TextInputLayout>
         <com.google.android.material.textfield.TextInputLayout
@@ -276,18 +303,20 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="25dp"
             android:hint="@string/student_id"
-            android:textColorHint="@color/black"
-            app:boxBackgroundMode="none"
             app:errorEnabled="true"
-            app:hintEnabled="true">
+            app:hintEnabled="true"
+            app:boxStrokeColor="@color/boxstrokecolor"
+            app:boxStrokeWidthFocused="2sp"
+            app:boxBackgroundColor="@color/white"
+            app:hintTextColor="@color/black"
+            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/school_id"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:inputType="number"
-                android:textColor="@color/black"
-                android:background="@color/white"/>
+                android:textColor="@color/black"/>
 
         </com.google.android.material.textfield.TextInputLayout>
         <com.google.android.material.textfield.TextInputLayout
@@ -296,10 +325,13 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="25dp"
             android:hint="@string/roll_no"
-            android:textColorHint="@color/black"
-            app:boxBackgroundMode="none"
             app:errorEnabled="true"
-            app:hintEnabled="true">
+            app:hintEnabled="true"
+            app:boxStrokeColor="@color/boxstrokecolor"
+            app:boxStrokeWidthFocused="2sp"
+            app:boxBackgroundColor="@color/white"
+            app:hintTextColor="@color/black"
+            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/roll_no"
@@ -307,8 +339,7 @@
                 android:layout_height="wrap_content"
                 android:inputType="number"
                 android:maxLength="3"
-                android:textColor="@color/black"
-                android:background="@color/white"/>
+                android:textColor="@color/black"/>
 
         </com.google.android.material.textfield.TextInputLayout>
         <com.google.android.material.textfield.TextInputLayout
@@ -317,18 +348,20 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="25dp"
             android:hint="@string/className"
-            android:textColorHint="@color/black"
-            app:boxBackgroundMode="none"
             app:errorEnabled="true"
-            app:hintEnabled="true">
+            app:hintEnabled="true"
+            app:boxStrokeColor="@color/boxstrokecolor"
+            app:boxStrokeWidthFocused="2sp"
+            app:boxBackgroundColor="@color/white"
+            app:hintTextColor="@color/black"
+            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/class_name"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:inputType="text"
-                android:textColor="@color/black"
-                android:background="@color/white"/>
+                android:textColor="@color/black"/>
 
         </com.google.android.material.textfield.TextInputLayout>
         <com.google.android.material.textfield.TextInputLayout
@@ -337,10 +370,13 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="25dp"
             android:hint="@string/division"
-            android:textColorHint="@color/black"
-            app:boxBackgroundMode="none"
             app:errorEnabled="true"
-            app:hintEnabled="true">
+            app:hintEnabled="true"
+            app:boxStrokeColor="@color/boxstrokecolor"
+            app:boxStrokeWidthFocused="2sp"
+            app:boxBackgroundColor="@color/white"
+            app:hintTextColor="@color/black"
+            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/division"
@@ -348,8 +384,7 @@
                 android:layout_height="wrap_content"
                 android:inputType="text"
                 android:maxLength="1"
-                android:textColor="@color/black"
-                android:background="@color/white"/>
+                android:textColor="@color/black"/>
 
         </com.google.android.material.textfield.TextInputLayout>
 
