--- a/app/src/main/res/layout/activity_register_user.xml
+++ b/app/src/main/res/layout/activity_register_user.xml
@@ -18,12 +18,15 @@
         android:orientation="vertical">
 
         <com.google.android.material.textview.MaterialTextView
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/personal_details"
             android:textColor="@color/black"
             android:textSize="25sp"
-            android:textStyle="bold" />
+            android:textStyle="bold"
+            android:gravity="center"
+            android:layout_marginTop="10sp"
+            android:layout_marginBottom="10sp" />
 
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/register_full_name_layout"
@@ -31,18 +34,20 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="25dp"
             android:hint="@string/enter_your_full_name"
-            android:textColorHint="@color/black"
-            app:boxBackgroundMode="none"
             app:errorEnabled="true"
-            app:hintEnabled="true">
+            app:hintEnabled="true"
+            app:boxStrokeColor="@color/boxstrokecolor"
+            app:boxStrokeWidthFocused="2sp"
+            app:boxBackgroundColor="@color/white"
+            app:hintTextColor="@color/black"
+            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/register_full_name"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:inputType="text"
-                android:textColor="@color/black"
-                android:background="@color/white"/>
+                android:textColor="@color/black"/>
 
         </com.google.android.material.textfield.TextInputLayout>
 
@@ -51,17 +56,19 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="15dp"
             android:hint="@string/date_of_birth_yyyy_mm_dd"
-            android:textColorHint="@color/black"
             app:errorEnabled="true"
-            app:boxBackgroundMode="none"
-            app:hintEnabled="true">
+            app:hintEnabled="true"
+            app:boxStrokeColor="@color/boxstrokecolor"
+            app:boxStrokeWidthFocused="2sp"
+            app:boxBackgroundColor="@color/white"
+            app:hintTextColor="@color/black"
+            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/register_dob"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:inputType="date"
-                android:background="@color/white"
                 android:textColor="@color/black" />
 
         </com.google.android.material.textfield.TextInputLayout>
@@ -144,17 +151,19 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="15dp"
             android:hint="@string/enter_your_email_address"
-            android:textColorHint="@color/black"
             app:errorEnabled="true"
-            app:boxBackgroundMode="none"
-            app:hintEnabled="true">
+            app:hintEnabled="true"
+            app:boxStrokeColor="@color/boxstrokecolor"
+            app:boxStrokeWidthFocused="2sp"
+            app:boxBackgroundColor="@color/white"
+            app:hintTextColor="@color/black"
+            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/register_email"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:inputType="textEmailAddress"
-                android:background="@color/white"
                 android:textColor="@color/black" />
 
         </com.google.android.material.textfield.TextInputLayout>
@@ -165,10 +174,13 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="15dp"
             android:hint="@string/enter_your_phone_number"
-            android:textColorHint="@color/black"
             app:errorEnabled="true"
-            app:boxBackgroundMode="none"
-            app:hintEnabled="true">
+            app:hintEnabled="true"
+            app:boxStrokeColor="@color/boxstrokecolor"
+            app:boxStrokeWidthFocused="2sp"
+            app:boxBackgroundColor="@color/white"
+            app:hintTextColor="@color/black"
+            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/register_Mobile1"
@@ -176,7 +188,6 @@
                 android:layout_height="wrap_content"
                 android:inputType="number"
                 android:maxLength="10"
-                android:background="@color/white"
                 android:textColor="@color/black" />
 
         </com.google.android.material.textfield.TextInputLayout>
@@ -186,10 +197,13 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="15dp"
             android:hint="@string/alternate_mobile_no"
-            android:textColorHint="@color/black"
             app:errorEnabled="true"
-            app:boxBackgroundMode="none"
-            app:hintEnabled="true">
+            app:hintEnabled="true"
+            app:boxStrokeColor="@color/boxstrokecolor"
+            app:boxStrokeWidthFocused="2sp"
+            app:boxBackgroundColor="@color/white"
+            app:hintTextColor="@color/black"
+            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/register_Mobile2"
@@ -197,7 +211,6 @@
                 android:layout_height="wrap_content"
                 android:inputType="number"
                 android:maxLength="10"
-                android:background="@color/white"
                 android:textColor="@color/black" />
 
         </com.google.android.material.textfield.TextInputLayout>
@@ -217,17 +230,19 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="15dp"
             android:hint="@string/residential_address"
-            android:textColorHint="@color/black"
             app:errorEnabled="true"
-            app:boxBackgroundMode="none"
-            app:hintEnabled="true">
+            app:hintEnabled="true"
+            app:boxStrokeColor="@color/boxstrokecolor"
+            app:boxStrokeWidthFocused="2sp"
+            app:boxBackgroundColor="@color/white"
+            app:hintTextColor="@color/black"
+            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/register_address"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:inputType="textMultiLine"
-                android:background="@color/white"
                 android:textColor="@color/black" />
 
         </com.google.android.material.textfield.TextInputLayout>
@@ -237,17 +252,19 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="15dp"
             android:hint="@string/city"
-            android:textColorHint="@color/black"
             app:errorEnabled="true"
-            app:boxBackgroundMode="none"
-            app:hintEnabled="true">
+            app:hintEnabled="true"
+            app:boxStrokeColor="@color/boxstrokecolor"
+            app:boxStrokeWidthFocused="2sp"
+            app:boxBackgroundColor="@color/white"
+            app:hintTextColor="@color/black"
+            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/register_city"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:inputType="text"
-                android:background="@color/white"
                 android:textColor="@color/black" />
 
         </com.google.android.material.textfield.TextInputLayout>
@@ -258,10 +275,13 @@
             android:layout_marginTop="15dp"
             android:layout_marginBottom="10dp"
             android:hint="@string/pin_code"
-            android:textColorHint="@color/black"
             app:errorEnabled="true"
-            app:boxBackgroundMode="none"
-            app:hintEnabled="true">
+            app:hintEnabled="true"
+            app:boxStrokeColor="@color/boxstrokecolor"
+            app:boxStrokeWidthFocused="2sp"
+            app:boxBackgroundColor="@color/white"
+            app:hintTextColor="@color/black"
+            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/register_pin_code"
@@ -269,7 +289,6 @@
                 android:layout_height="wrap_content"
                 android:inputType="number"
                 android:maxLength="6"
-                android:background="@color/white"
                 android:textColor="@color/black" />
 
         </com.google.android.material.textfield.TextInputLayout>
@@ -287,10 +306,13 @@
             android:layout_marginTop="15dp"
             android:layout_marginBottom="10dp"
             android:hint="@string/id_no"
-            android:textColorHint="@color/black"
             app:errorEnabled="true"
-            app:boxBackgroundMode="none"
-            app:hintEnabled="true">
+            app:hintEnabled="true"
+            app:boxStrokeColor="@color/boxstrokecolor"
+            app:boxStrokeWidthFocused="2sp"
+            app:boxBackgroundColor="@color/white"
+            app:hintTextColor="@color/black"
+            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
 
 
             <com.google.android.material.textfield.TextInputEditText
@@ -298,7 +320,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:inputType="number"
-                android:background="@color/white"
+                android:maxLength="5"
                 android:textColor="@color/black" />
 
         </com.google.android.material.textfield.TextInputLayout>
@@ -309,17 +331,19 @@
             android:layout_marginTop="15dp"
             android:layout_marginBottom="10dp"
             android:hint="@string/name"
-            android:textColorHint="@color/black"
             app:errorEnabled="true"
-            app:boxBackgroundMode="none"
-            app:hintEnabled="true">
+            app:hintEnabled="true"
+            app:boxStrokeColor="@color/boxstrokecolor"
+            app:boxStrokeWidthFocused="2sp"
+            app:boxBackgroundColor="@color/white"
+            app:hintTextColor="@color/black"
+            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/register_student_name"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:inputType="text"
-                android:background="@color/white"
                 android:textColor="@color/black" />
         </com.google.android.material.textfield.TextInputLayout>
 
