--- a/app/src/main/res/layout/fragment_attendee_home.xml
+++ b/app/src/main/res/layout/fragment_attendee_home.xml
@@ -67,8 +67,11 @@
                             android:layout_height="wrap_content"
                             android:layout_gravity="center_horizontal"
                             android:layout_marginTop="10dp"
+                            android:layout_marginRight="2dp"
                             android:drawableStart="@drawable/ic_email_black_24dp"
-                            android:textSize="17sp" />
+                            android:layout_marginBottom="10dp"
+                            android:textColor="@color/black"
+                            android:textSize="20sp" />
                     </androidx.appcompat.widget.LinearLayoutCompat>
 
 
@@ -86,8 +89,10 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="20dp"
+                        android:layout_marginBottom="10dp"
+                        android:layout_marginRight="2dp"
+                        android:textSize="20sp"
                         android:drawableStart="@drawable/ic_perm_contact_calendar_black_24dp"
-                        android:textSize="17sp"
                         android:textStyle="bold" />
 
                     <com.google.android.material.textview.MaterialTextView
@@ -96,8 +101,10 @@
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="20dp"
                         android:layout_marginTop="10dp"
+                        android:layout_marginBottom="10dp"
+                        android:layout_marginRight="2dp"
                         android:drawableStart="@drawable/ic_subway_black_24dp"
-                        android:textSize="17sp"
+                        android:textSize="20sp"
                         android:textStyle="bold" />
 
 
@@ -108,8 +115,10 @@
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="20dp"
                         android:layout_marginTop="10dp"
+                        android:layout_marginBottom="10dp"
                         android:drawableStart="@drawable/ic_cake_black_24dp"
-                        android:textSize="17sp"
+                        android:textSize="20sp"
+                        android:layout_marginRight="2dp"
                         android:textStyle="bold" />
 
                     <com.google.android.material.textview.MaterialTextView
@@ -119,8 +128,10 @@
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="20dp"
                         android:layout_marginTop="10dp"
+                        android:layout_marginBottom="10dp"
+                        android:layout_marginRight="2dp"
                         android:drawableStart="@drawable/ic_place_black_24dp"
-                        android:textSize="17sp"
+                        android:textSize="20sp"
                         android:textStyle="bold" />
 
                 </androidx.appcompat.widget.LinearLayoutCompat>
