--- a/app/src/main/res/layout/fragment_change_password.xml
+++ b/app/src/main/res/layout/fragment_change_password.xml
@@ -29,10 +29,14 @@ tools:context=".fragments.ChangePassword">
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginTop="10dp"
-    android:textColorHint="@color/gray"
     app:endIconTint="@color/gray"
-    app:boxBackgroundMode="none"
-    app:passwordToggleEnabled="true">
+    app:passwordToggleEnabled="true"
+    android:layout_marginBottom="10dp"
+    app:boxStrokeColor="@color/boxstrokecolor"
+    app:boxStrokeWidthFocused="2sp"
+    app:boxBackgroundColor="@color/white"
+    app:hintTextColor="@color/black"
+    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
 
     <com.google.android.material.textfield.TextInputEditText
         android:id="@+id/old_password"
@@ -41,7 +45,6 @@ tools:context=".fragments.ChangePassword">
         android:hint="@string/enter_your_old_password"
         android:inputType="textPassword"
         android:textColor="@color/black"
-        android:background="@color/white"
         />
 
 </com.google.android.material.textfield.TextInputLayout>
@@ -52,10 +55,14 @@ tools:context=".fragments.ChangePassword">
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginTop="10dp"
-    android:textColorHint="@color/gray"
+    android:layout_marginBottom="10dp"
     app:endIconTint="@color/gray"
-    app:boxBackgroundMode="none"
-    app:passwordToggleEnabled="true">
+    app:passwordToggleEnabled="true"
+    app:boxStrokeColor="@color/boxstrokecolor"
+    app:boxStrokeWidthFocused="2sp"
+    app:boxBackgroundColor="@color/white"
+    app:hintTextColor="@color/black"
+    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
 
     <com.google.android.material.textfield.TextInputEditText
         android:id="@+id/new_password"
@@ -64,7 +71,6 @@ tools:context=".fragments.ChangePassword">
         android:hint="@string/enter_your_new_password"
         android:inputType="textPassword"
         android:textColor="@color/black"
-        android:background="@color/white"
         />
 
 </com.google.android.material.textfield.TextInputLayout>
