--- a/app/src/main/res/layout/fragment_parent_home.xml
+++ b/app/src/main/res/layout/fragment_parent_home.xml
@@ -70,7 +70,8 @@ tools:context=".fragments.ParentHome"
                         android:layout_gravity="center_horizontal"
                         android:layout_marginTop="10dp"
                         android:drawableStart="@drawable/ic_email_black_24dp"
-                        android:textSize="17sp" />
+                        android:layout_marginBottom="10dp"
+                        android:textSize="20sp"/>
                 </androidx.appcompat.widget.LinearLayoutCompat>
 
 
@@ -90,7 +91,8 @@ tools:context=".fragments.ParentHome"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="20dp"
                     android:drawableStart="@drawable/ic_perm_contact_calendar_black_24dp"
-                    android:textSize="17sp"
+                    android:layout_marginBottom="10dp"
+                    android:textSize="20sp"
                     android:textStyle="bold" />
 
                 <com.google.android.material.textview.MaterialTextView
@@ -100,7 +102,8 @@ tools:context=".fragments.ParentHome"
                     android:layout_marginLeft="20dp"
                     android:layout_marginTop="10dp"
                     android:drawableStart="@drawable/ic_subway_black_24dp"
-                    android:textSize="17sp"
+                    android:layout_marginBottom="10dp"
+                    android:textSize="20sp"
                     android:textStyle="bold" />
 
 
@@ -111,7 +114,8 @@ tools:context=".fragments.ParentHome"
                     android:layout_marginLeft="20dp"
                     android:layout_marginTop="10dp"
                     android:drawableStart="@drawable/ic_cake_black_24dp"
-                    android:textSize="17sp"
+                    android:layout_marginBottom="10dp"
+                    android:textSize="20sp"
                     android:textStyle="bold" />
 
                 <com.google.android.material.textview.MaterialTextView
@@ -121,7 +125,8 @@ tools:context=".fragments.ParentHome"
                     android:layout_marginLeft="20dp"
                     android:layout_marginTop="10dp"
                     android:drawableStart="@drawable/ic_school_black_24dp"
-                    android:textSize="17sp"
+                    android:layout_marginBottom="10dp"
+                    android:textSize="20sp"
                     android:textStyle="bold" />
 
                 <com.google.android.material.textview.MaterialTextView
@@ -132,7 +137,8 @@ tools:context=".fragments.ParentHome"
                     android:layout_marginLeft="20dp"
                     android:layout_marginTop="10dp"
                     android:drawableStart="@drawable/ic_place_black_24dp"
-                    android:textSize="17sp"
+                    android:layout_marginBottom="10dp"
+                    android:textSize="20sp"
                     android:textStyle="bold" />
 
 
